# GraphScope

bi/: README.md
bi/config/: graph_functions.yaml  graph_schema.json  ir.compiler.properties  ldbc_schema_csr.yaml  queries.yaml
bi/driver/: pom.xml
bi/resources/: gen_pegasus_from_plan  libir_core.dylib
bi/scripts/: benchmark.sh  build.sh  generate_driver_config.sh  generate_dylib.sh  generate_servers_config.sh  install_dependency.sh  start_ldbc_server.sh  stop_server.sh
bi/server/: Cargo.toml
bi/storage/: Cargo.toml
bi/storage/src/: columns.rs  csr.rs  csr_trait.rs  dataframe.rs  date.rs  date_time.rs  edge_loader.rs  graph_db.rs  graph_loader.rs  graph_loader_beta.rs  indexer.rs  lib.rs  schema.rs  scsr.rs  shuffler.rs  sub_graph.rs  traverse.rs  utils.rs  vertex_map.rs
bi/storage/src/mmap_container/: mod.rs
bi/storage/src/shm_container/: mod.rs  shm_vec.rs
docs/: analytics_engine.html  deployment.html  developer_guide.html  frequently_asked_questions.html  genindex.html  getting_started.html  graph_transformation.html  index.html  installation.html  interactive_engine.html  learning_engine.html  loading_graph.html  miscellaneous.html  persistent_graph_store.html  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/_modules/: index.html
docs/latest/: algorithm_development.html  bulk_loader.html  code_style_guide.html  contact_us.html  cpp_tutorials.html  deploy_as_job_for_analytical_tasks.html  deploy_as_service_with_groot.html  deploy_on_clouds.html  deploy_on_self_managed_k8s.html  deploy_with_helm.html  dive_into_engines.html  env_preparation.html  error_codes.html  frequently_asked_questions.html  genindex.html  glossary.html  graphscope_for_data_scientists.html  graphscope_for_graph_analytics.html  graphscope_for_learning.html  graphscope_for_traversal_queries.html  graphscope_positioning.html  how_to_contribute.html  how_to_find_logs.html  how_to_report_bug.html  index.html  installation.html  java_tutorial_0_pie.html  java_tutorial_1_giraph.html  (+19 more)
interactive_engine/: pom.xml
interactive_engine/executor/benchmark/: Cargo.toml
interactive_engine/executor/benchmark/src/queries/ldbc/: graph.rs  mod.rs  vertex_count.rs
interactive_engine/executor/store/shm_graph/: Cargo.toml  shared_string_vec.bin_content  shared_string_vec.bin_offset
interactive_engine/executor/store/shm_graph/src/: columns.rs  csr.rs  csr_trait.rs  dataframe.rs  edge_loader.rs  graph_db.rs  graph_loader.rs  graph_loader_beta.rs  graph_modifier.rs  indexer.rs  lib.rs  record_batch.rs  schema.rs  scsr.rs  sub_graph.rs  table.rs  traverse.rs  utils.rs  vector.rs  vertex_loader.rs  vertex_map.rs
(+2273 files in other folders)
