[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.32.0"
byteorder = "1.5.0"
env_logger = "0.7.1"
chrono = "0.4.23"
pegasus_common = { path = "../../interactive_engine/executor/engine/pegasus/common" }
dyn_type = { path = "../../interactive_engine/executor/common/dyn_type" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0.1"
log = "0.4"
itertools = "0.9"
abomonation = "0.7.3"
abomonation_derive = "0.5"
csv = "1.1"
rayon = "1.5.1"
libc = "0.2.167"
regex = "1.7.1"
rust-htslib = { version = "0.46.0", default-features = false, features = ["bzip2", "lzma"] }
dashmap = "5.5.3"
memmap2 = "0.9"
