[workspace]

[package]
name = "pegasus-benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pegasus = { path = "../engine/pegasus/pegasus" }
pegasus_common = { path = "../engine/pegasus/common" }
pegasus_network = { path = "../engine/pegasus/network" }
chrono = "0.4"
tonic = { version = "0.5", features = ["default", "compression"] }
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread"] }
structopt = "0.3"
futures = "0.3.19"
lazy_static = "1.3.0"
log = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.2"
mcsr = { path = "../store/mcsr" }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", features = ["debug", "profiling"] }
jemalloc-sys = { version = "0.5.1+5.3.0-patched", features = ["debug","profiling"] }

[build-dependencies]
tonic-build = { version = "0.5", features = ["default", "compression"] }

[features]
default = []
gcip = []

[profile.release]
debug = true

[lib]
name = "pegasus_benchmark"
path = "src/lib.rs"

[[bin]]
name = "ldbc_distributed"
